# stm32templateCpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  system.c
